Bugfix: All-Day Events, Linux
+ Fix today's all day events not showing up
+ Fix changes for running headless on Linux

--- a/html-resources/style.css
+++ b/html-resources/style.css
@@ -31,6 +31,7 @@ tr td {
 }
 .right {
   float: right;
+  margin-right: 2em;
 }
 .scrollbar {
   width: 96px;
